--- a/DLyz.Threading.Benchmark/DLyz.Threading.Benchmark.csproj
+++ b/DLyz.Threading.Benchmark/DLyz.Threading.Benchmark.csproj
@@ -2,13 +2,16 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <EnableNet6>True</EnableNet6>
+    <TargetFrameworks>net5.0</TargetFrameworks>
+    <TargetFrameworks Condition="'$(EnableNet6)' == 'True'">$(TargetFrameworks);net6.0</TargetFrameworks>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="16.9.60" />
+    <PackageReference Include="Nito.AsyncEx" Version="5.1.0" />
   </ItemGroup>
 
   <ItemGroup>
